<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="hitam.epics.sahaya.RegistrationActivity">

    <LinearLayout
        android:id="@+id/registration_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/sahaya_logo" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/please_wait"
            android:textAlignment="center" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/logo"
                    android:src="@mipmap/ic_launcher"
                    android:transitionName="logo"
                    tools:targetApi="lollipop" />

                <android.support.v4.widget.Space
                    android:layout_width="5dp"
                    android:layout_height="1dp" />

                <TextView
                    style="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#E7E9F9"
                    android:textSize="40sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/registration_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_rectangle_upper_curve"
                android:hint="@string/name"
                android:inputType="textPersonName|textCapWords" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/perfect_rectangle"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/perfect_rectangle"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/registration_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/perfect_rectangle"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/registration_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/perfect_rectangle"
                android:hint="@string/phone"
                android:inputType="phone" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/registration_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_rectangle_lower_curve"
                android:hint="@string/occupation"
                android:inputType="textCapWords" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <Button
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="4dp"
                android:onClick="register"
                android:padding="20dp"
                android:text="@string/register"
                android:textColor="#E7E9F9"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
