<resources>
    <string name="app_name">Sahaya</string>
    <string name="login">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="occupation">Occupation</string>
    <string name="new_here">New here? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="about_1">Sahaya provides an opportunity to individuals who want to make a positive impact in the society by empowering, enriching and encouraging under-priviliged school going children.</string>
    <string name="organisation">Sahaya Society, Hyderabad</string>
    <string name="logo">logo</string>
    <string name="please_wait">Please Wait</string>
    <string name="title_activity_about">About</string>
    <string name="about_us">About us</string>
    <string name="about_2">Sahaya is a network of enthusiastic young volunteers, with an average age of 22. In a span of five years, what initially began as a simple idea by a group of 6 engineering students soon turned into a well-organized network of over 150 volunteers with a single minded goal to help the less privileged kids improve their life skills and other necessary skills such as English, Computer Skills and Communication skills.</string>
    <string name="visit_our_website_nsahayasociety_org">Visit our website:\nwww.sahayasociety.org/</string>
    <string name="class_text">Class:</string>
    <string name="subject">Subject:</string>
    <string name="enter_your_message_here">Enter Your Message Here</string>
    <string name="no_messages">No Messages</string>
    <string name="logout">Logout</string>

    <string name="facebook_app_id">1011124365698784</string>
    <string name="fb_login_protocol_scheme">fb1011124365698784</string>

    <string name="textbooks_path">http://scert.telangana.gov.in/sites/default/files/publication/ebooks/</string>
    <string name="events">Events</string>
    <string name="archives">Archives</string>
    <string name="profile">Profile</string>
    <string name="discussion_forum">Discussion Forum</string>
    <string name="directions">Directions</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date(DD/MM/YYYY)</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="add_event">Add Event</string>
    <string name="cancel">Cancel</string>
    <string name="no_event_found">No Event Found</string>
    <string name="manage_events">Manage Events</string>
    <string name="delete_event">Delete Event</string>
    <string name="roles">Roles</string>
    <string name="volunteer">VOLUNTEER</string>
    <string name="admin">ADMIN</string>
    <string name="role">Role</string>
    <string name="announcementItem">Announcement</string>
    <string name="announce">Announce</string>
    <string name="announcements">Announcements</string>
    <string name="attendance">Attendance</string>
    <string name="contact_details">Contact Details</string>
    <string name="loading">Loading…</string>
    <string name="notes">Notes</string>
    <string name="textbook">Textbook</string>
    <string name="message_user_icon">Message User Icon</string>
    <string name="sahaya_logo">Sahaya Logo</string>
    <string name="send_button">Send Button</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="name_edit_button">Name Edit Button</string>
    <string name="name_save_button">Name Save Button</string>
    <string name="name_cancel_edit_button">Name Cancel Edit Button</string>
    <string name="no_event_for_selected_day">No event for selected day</string>
    <string name="who_we_are">Who we are?</string>
    <string name="we_are_proud_to_say_that_the_sahaya_family_has_now_adopted_over_eight_schools_and_is_teaching_to_over_2500_kids_across_three_districts_in_andhra_pradesh_as_sahaya_began_to_gain_popularity_we_began_receiving_help_from_the_student_and_working_community_in_hyderabad_project_library_a_prestigious_project_where_we_managed_to_collect_over_4000_books_wouldn_t_have_been_possible_without_the_help_of_them">We are proud to say that the Sahaya family has now adopted over eight schools and is teaching to over 2500 kids across three districts in Andhra Pradesh. As Sahaya began to gain popularity, we began receiving help from the student and working community in Hyderabad. Project Library, a prestigious project where we managed to collect over 4000 books wouldn’t have been possible without the help of them.</string>
    <string name="we_would_like_to_have_few_additional_information_about_you">We would like to have few additional information about You</string>
    <string name="sahaya">Sahaya</string>
    <string name="read_our_blogs_nsahaya4needy_blogspot_in">Read our blogs: \nsahaya4needy.blogspot.in/</string>
    <string name="swipe_left_for_more">Swipe Left for more</string>
    <string name="continue_text">Continue</string>
    <string name="contact_us_nsreeram_9985943635_nsrikanth_9247766039_ndharani_kumar_9985085665_n_nischal_9704668057">Contact us:\nSreeram : 9985943635\nSrikanth -9247766039\nDharani Kumar -9985085665\n Nischal -9704668057</string>
    <string name="email_us_to_nsahaya08_gmail_com">Email us to:\nsahaya08@gmail.com</string>
    <string name="community_involvement">Community Involvement</string>
    <string name="total">Total: %d</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="dashboard_menu_icon">Dashboard Menu Icon</string>
    <string name="contacts">Contacts</string>
    <string name="centers">Centers</string>
    <string name="center_name">Unique ID(Reuse ID to Replace)</string>
    <string name="add_center">Add Center</string>
    <string name="delete_center">Delete Center</string>
    <string name="remarks">Remarks</string>
    <string name="leave_remark">Leave Remark</string>
    <string name="add_notes">Add Notes</string>
    <string name="remark">Remark</string>
    <string name="type_remark_here">Type Remark Here</string>
    <string name="send">Send</string>
    <string name="no_remarks">No Remarks</string>
    <string name="type_your_note_here">Type your note here</string>
    <string name="send_with_picture">Send With Picture</string>
    <string name="view_picture">View Picture</string>
    <string name="developers">Developers</string>
    <string name="sanjit_singh_chouhan_npattan_asif_khan_nt_sri_yeswanth">Sanjit Singh Chouhan\nPattan Asif Khan\nT Sri Yeswanth</string>
    <string name="no_notes">No Notes</string>
    <string name="curriculum">Curriculum</string>
</resources>
