<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hitam.epics.sahaya.LoginActivity">

    <LinearLayout
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image2"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/sahaya_logo"
            android:transitionName="logo"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:id="@+id/login_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/please_wait"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_rectangle_upper_curve"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/message_24"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_rectangle_lower_curve"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/unlock_24"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:onClick="login"
                android:padding="20dp"
                android:text="@string/login"
                android:textColor="#E7E9F9"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:onClick="resetPassword"
                    android:text="@string/forgot_password"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    tools:ignore="TextViewEdits" />

                <Button
                    style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:onClick="register"
                    android:text="@string/new_here"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    tools:ignore="TextViewEdits" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_margin="10dp"
                android:foreground="#555" />


            <com.facebook.login.widget.LoginButton
                android:id="@+id/button_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
